--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,10 +1,15 @@
 .banner-container {
     position: relative;
     width: 100%;
-    height: 65vh;
+    height: 60vh;
+    
     display: flex;
     flex-direction: column;
     overflow: hidden;
+}
+
+.banner-container {
+    padding-top: 80px; /* igual à altura do header */
 }
 
 .video-background {
@@ -15,6 +20,7 @@
     height: 100%;
     object-fit: cover;
     z-index: -1;
+    background: rgba(0, 0, 0, 0.50); /* fundo escuro semitransparente */
 }
 
 .banner-container::after {
@@ -24,7 +30,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0.45); /* ajuste a opacidade conforme desejar */
     z-index: 0;
     pointer-events: none;
 }
@@ -32,17 +37,16 @@
 .banner-txt-area {
   position: relative;
   z-index: 2;
-  color: #fff; /* ajuste conforme necessário */
-  /* centralize o texto se quiser */
+  color: #fff; 
   display: flex;
   flex-direction: column;
+  margin-left: 9%;
 
   height: 100%;
-
-    background: rgba(0, 0, 0, 0.45); /* fundo escuro semitransparente */
   padding: 40px 0 40px 0;           /* ajuste conforme necessário */
   border-radius: 12px; 
 }
+
 
 .banner-title {
     color: white;
@@ -65,7 +69,7 @@
 }
 
 .cta {
-    margin-top: 20px;
+    margin-top: 35px;
 }
 
 .btn-cta {
@@ -75,7 +79,7 @@
     border-radius: 5px;
     font-size: 1rem;
 
-    margin-top: 23px;
+    margin-top: 50px;
     margin-left: 40px;
 }
 
